Add and Improve View for Order Create View

--- a/HMQL_Project01_QuanLyBanHang/HMQL_Project01_QuanLyBanHang/MVVM/View/OrderManagementView.xaml
+++ b/HMQL_Project01_QuanLyBanHang/HMQL_Project01_QuanLyBanHang/MVVM/View/OrderManagementView.xaml
@@ -99,7 +99,7 @@
                             <DropShadowEffect  Opacity="0.3" Direction="300" />
                         </Border.Effect>
                         <Border.InputBindings>
-                            <MouseBinding MouseAction="LeftClick" Command="{Binding OrderDetailViewCommand}"/>
+                            <MouseBinding MouseAction="LeftClick" Command="{Binding OrderCreateViewCommand}"/>
                         </Border.InputBindings>
                         <TextBlock Text="Add Order" 
                                FontSize="12" FontWeight="DemiBold" Foreground="White"
@@ -203,18 +203,7 @@
                                 </DataGridTextColumn.ElementStyle>
                             </DataGridTextColumn>
                                 
-                            <DataGridTemplateColumn Header="" IsReadOnly="True" Width="auto">
-                                <DataGridTemplateColumn.CellTemplate>
-                                    <DataTemplate>
-                                        <StackPanel Orientation="Horizontal">
-                                            <Button Width="20" Height="20" HorizontalAlignment="Center">
-                                                <Image Source="../../Images/OrderManagementSVG/trash-can-solid.png" Width="10" Height="10" 
-                                        VerticalAlignment="Center" Margin="0 0 0 0" HorizontalAlignment="Center" />
-                                            </Button>
-                                        </StackPanel>
-                                    </DataTemplate>
-                                </DataGridTemplateColumn.CellTemplate>
-                            </DataGridTemplateColumn>
+                           
                         </DataGrid.Columns>
                         <DataGrid.RowStyle>
                             <Style TargetType="{x:Type DataGridRow}">
