--- a/HMQL_Project01_QuanLyBanHang/HMQL_Project01_QuanLyBanHang/MVVM/View/OrderCreateView.xaml
+++ b/HMQL_Project01_QuanLyBanHang/HMQL_Project01_QuanLyBanHang/MVVM/View/OrderCreateView.xaml
@@ -439,9 +439,9 @@
                         CornerRadius="4"
                         Margin="0 16 16 0" Width="225" Height="25">
                         <Border.InputBindings>
-                            <MouseBinding MouseAction="LeftClick" Command="{Binding LoginCommand}"/>
+                            <MouseBinding MouseAction="LeftClick" Command="{Binding CancelCommand}"/>
                         </Border.InputBindings>
-                        <TextBlock Text="Delete Changes" 
+                        <TextBlock Text="Cancel Changes" 
                                FontSize="16" FontWeight="Bold" Foreground="White"
                                HorizontalAlignment="Center" VerticalAlignment="Center"/>
                     </Border>
